--- a/.github/workflows/generate_syllabus.yml
+++ b/.github/workflows/generate_syllabus.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           output_dir: PDF
           main_latex_file: source/002/Section_002_Fall_2025.tex
-          ctan_packages: moderncv colortbl fontawesome lua-uni-algos fullpage preprint
+          ctan_packages: moderncv colortbl fontawesome lua-uni-algos fullpage preprint longtable booktabs array
          
       - name: Upload PDF to the workflow tab
         id: upload-workflow-002
@@ -38,7 +38,7 @@ jobs:
         with:
           output_dir: PDF
           main_latex_file: source/003/Section_003_Fall_2025.tex
-          ctan_packages: moderncv colortbl fontawesome lua-uni-algos fullpage preprint
+          ctan_packages: moderncv colortbl fontawesome lua-uni-algos fullpage preprint longtable booktabs array
           
       - name: Upload PDF to the workflow tab
         id: upload-workflow-003
